example/lib/src/generated/errors/errors_localization_zu.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Zulu (`zu`).
class ErrorsLocalizationZu extends ErrorsLocalization {
  ErrorsLocalizationZu([String locale = 'zu']) : super(locale);

  @override
  String get error => 'Kwenzekile iphutha';

  @override
  String get unexpectedError => 'Kwenzekile iphutha elingalindelekile';

  @override
  String get bugReportSentText => 'Umbiko wephutha uthunyelwe ngempumelelo.';
}
